fixed bug where loading new symbol with chart would break the world

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -19,5 +19,5 @@ html,body{
 }
 
 #chart-container{
-	height:20%;
+	height:50%;
 }
